--- a/express_webapp/views/users.jade
+++ b/express_webapp/views/users.jade
@@ -4,24 +4,26 @@ html
         title= title
         link(href='/stylesheets/style.css', rel='stylesheet')
     body
-        table(border='1')
-            thead
-                tr
-                    th Nom
-                    th Prénom
-                    th Date de naissance
-                    th Sexe
-                    th Taille
-                    th Poids
-                    th Email
-            tbody
-                each user in data
-                    tr
-                        td= user.nom
-                        td= user.prenom
-                        td= user.dateDeNaissance
-                        td= user.sexe
-                        td= user.taille
-                        td= user.poids
-                        td= user.email
+        .lastPart
+            .container
+                table(border='1')
+                    thead
+                        tr
+                            th Nom
+                            th Prénom
+                            th Date de naissance
+                            th Sexe
+                            th Taille
+                            th Poids
+                            th Email
+                    tbody
+                        each user in data
+                            tr
+                                td= user.nom
+                                td= user.prenom
+                                td= user.dateDeNaissance
+                                td= user.sexe
+                                td= user.taille
+                                td= user.poids
+                                td= user.email
 
