--- a/express_webapp/views/users.jade
+++ b/express_webapp/views/users.jade
@@ -2,28 +2,14 @@ doctype html
 html
     head
         title= title
-        link(href='/stylesheets/style.css', rel='stylesheet')
+        link(href='/stylesheets/form.css', rel='stylesheet')
     body
-        .lastPart
-            .container
-                table(border='1')
-                    thead
-                        tr
-                            th Nom
-                            th Prénom
-                            th Date de naissance
-                            th Sexe
-                            th Taille
-                            th Poids
-                            th Email
-                    tbody
-                        each user in data
-                            tr
-                                td= user.nom
-                                td= user.prenom
-                                td= user.dateDeNaissance
-                                td= user.sexe
-                                td= user.taille
-                                td= user.poids
-                                td= user.email
+        .main
+            div(class="form-container basic") 
+                .form-group
+                    input(type="text" id="nom" name="nom" class="input" placeholder=" " autocomplete="off" autofocus)
+                    label(for="nom") Nom
+                .form-group
+
+
 
