--- a/express_webapp/views/layout.jade
+++ b/express_webapp/views/layout.jade
@@ -1,7 +1,6 @@
 doctype html
 html
   head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
-  body
-    block content
+    title SportTrack
+    link(rel="icon" href="./img/white.png")
+  block content
