--- a/express_webapp/views/users.jade
+++ b/express_webapp/views/users.jade
@@ -1,17 +1,15 @@
-doctype html
-html
-    head
-        title= title
-        link(href='/stylesheets/form.css', rel='stylesheet')
-        link(href='/stylesheets/button.css', rel='stylesheet')
-        link(rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" defer)
-        script(type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js")
-        script(src="https://kit.fontawesome.com/bdaa21e6ed.js" crossorigin="anonymous" defer)
-        script(src="/js/inscription.js" crossorigin="anonymous" defer)
+extends layout
+block content
+    link(href='/stylesheets/form.css', rel='stylesheet')
+    link(href='/stylesheets/button.css', rel='stylesheet')
+    link(rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" defer)
+    script(type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js")
+    script(src="https://kit.fontawesome.com/bdaa21e6ed.js" crossorigin="anonymous" defer)
+    script(src="/js/inscription.js" crossorigin="anonymous" defer)
     body
         .main
             .head-form
-                a(href="/main")
+                a(href="/")
                     img(src="/img/logo.svg")
                 h1 S'inscrire
                 
