--- a/express_webapp/views/users.jade
+++ b/express_webapp/views/users.jade
@@ -16,7 +16,7 @@ html
                 h1 S'inscrire
                 
 
-            form(method='post' action='/users')
+            form(method='post',action='/users')
                 div(class="form-container basic") 
                     .form-group
                         input(type="text" id="nom" name="nom" class="input" placeholder=" " autocomplete="off" autofocus)
