--- a/express_webapp/views/upload.jade
+++ b/express_webapp/views/upload.jade
@@ -56,21 +56,20 @@ block content
                             th<i class="fa-regular fa-clock" title="Durée de l'activité"></i>
                             th<i class="fa-solid fa-arrows-left-right-to-line" title="Distance parcourue"></i>
                             th<i class="fa-solid fa-heart-pulse" title="Moyenne de fréquence cardiaque"></i>
-                            th<i class="fa-solid fa-chart-simple" title="Minimum et maximum de battements par minute"></i></th>
-
-                        </tr>
-                        //- <?php 
-                        //- if (isset($data['liste'])) {
-                        //-     $data = $data['liste'];
-    
-                        //-     for($i = 0; $i < count($data); $i++) { ?>
-                        //-         <tr>
-                        //-             <?php for ($j = 0; $j < count($data[$i]); $j++) { ?>
-                        //-                 <td><?php echo $data[$i][$j]; ?></td>
-                        //-             <?php } ?>
-                        //-         </tr>
-                        //-     <?php } 
-                        //- } ?> 
+                            th<i class="fa-solid fa-chart-simple" title="Minimum et maximum de battements par minute"></i>
+                        script
+                            if (typeof data['liste'] !== 'undefined') {
+                                data = data['liste'];
+                                for (i = 0; i < data.length;i++) {
+                                    <tr>
+                                        for (let j = 0; let j < data[i].length; j++) {
+                                            <td><?php 
+                                        console.log(data[i][j]);
+                                        ?></td>
+                                                            <?php 
+                                    }
+                                    ?>
+                                                        </tr>
                             
 
 
