👌 IMPROVE: Bouton qui marche

--- a/express_webapp/views/upload.jade
+++ b/express_webapp/views/upload.jade
@@ -4,6 +4,7 @@ block content
     link(href='/stylesheets/upload.css', rel='stylesheet')
     link(rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" defer)
     script(type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js")
+    script(src="/js/upload.js" defer)
     script(src="https://kit.fontawesome.com/bdaa21e6ed.js" crossorigin="anonymous" defer)
     body
         nav
