--- a/express_webapp/views/users.jade
+++ b/express_webapp/views/users.jade
@@ -5,7 +5,7 @@ block content
     link(rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" defer)
     script(type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js")
     script(src="https://kit.fontawesome.com/bdaa21e6ed.js" crossorigin="anonymous" defer)
-    script(src="/js/inscription.js" crossorigin="anonymous" defer)
+    script(src="/js/inscription.js" defer)
     body
         .main
             .head-form
