--- a/express_webapp/views/users.jade
+++ b/express_webapp/views/users.jade
@@ -42,7 +42,7 @@ block content
                         input(type="date" id="dateDeNaissance" class="input" name="dateDeNaissance")
                         label(for="dateDeNaissance") Nom
                     .form-group
-                        select(type=text class="input dropdown" name="sexe"  placeholder=" ")
+                        select(type=text class="input dropdown" name="sexe" value="Non genré" placeholder=" ")
                             option(value="Homme") Homme
                             option(value="Femme") Femme
                             option(value="Non genré") Non genré
