--- a/express_webapp/views/connect.jade
+++ b/express_webapp/views/connect.jade
@@ -1,11 +1,24 @@
 extends layout
 block content
-    link(href='/stylesheets/button.css', rel='stylesheet')
     link(href='/stylesheets/form.css', rel='stylesheet')
+    link(href='/stylesheets/button.css', rel='stylesheet')
     link(rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" defer)
     script(type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js")
     script(src="https://kit.fontawesome.com/bdaa21e6ed.js" crossorigin="anonymous" defer)
+    script(src="/js/inscription.js" defer)
     body
+        script.
+            if ('#{valid}') {
+                Toastify({
+                    text: "E-mail ou mot de passe invalide",
+                    duration: 3000,
+                    gravity: "top", 
+                    position: "center", // `left`, `center` or `right`
+                    style: {
+                        background: "#BF4342"
+                    }
+                }).showToast();       
+            }    
         .main
             .head-form
                 a(href="/")
