🐛 FIX: ça remarche avec les sessions

--- a/express_webapp/views/upload.jade
+++ b/express_webapp/views/upload.jade
@@ -8,7 +8,7 @@ block content
     script(src="https://kit.fontawesome.com/bdaa21e6ed.js" crossorigin="anonymous" defer)
     body
         script.
-            console.log('#{liste[0]}');
+            console.log('#{liste}');
             if ('#{modified}') {
                 Toastify({
                     text: "Vos informations ont bien été modifiées",
