👌 IMPROVE: ça repars

--- a/express_webapp/views/user_update.jade
+++ b/express_webapp/views/user_update.jade
@@ -40,9 +40,9 @@ block content
                         label(for="dateDeNaissance") Date de naissance
                     .form-group
                         select(type=text class="input dropdown" name="sexe" value="#{user.sexe}" placeholder=" ")
+                            option(value="Non binaire") Non binaire
                             option(value="Homme") Homme
                             option(value="Femme") Femme
-                            option(value="Non genré") Non genré
                         label(for="sexe")
                             i(class="fa-solid fa-venus-mars") 
                             a Sexe
