--- a/express_webapp/views/users.jade
+++ b/express_webapp/views/users.jade
@@ -42,10 +42,10 @@ block content
                         input(type="date" id="dateDeNaissance" class="input" name="dateDeNaissance")
                         label(for="dateDeNaissance") Nom
                     .form-group
-                        select(type=text class="input dropdown" name="sexe" value="Non genré" placeholder=" ")
+                        select(type=text class="input dropdown" name="sexe" value="Non binaire" placeholder=" ")
+                            option(value="Non binaire") Non binaire
                             option(value="Homme") Homme
                             option(value="Femme") Femme
-                            option(value="Non genré") Non genré
                         label(for="sexe")
                             i(class="fa-solid fa-venus-mars") 
                             a Sexe
