👌 IMPROVE: Presque finis

--- a/express_webapp/views/connect.jade
+++ b/express_webapp/views/connect.jade
@@ -28,7 +28,7 @@ block content
             form(method='post' action='/connect')
                 div(class="basic form-container")
                     .form-group
-                        input(type="email" id="email" class="input" name="email" placeholder=" " autocomplete="off")
+                        input(type="email" id="email" class="input" name="email" placeholder=" " autocomplete="off" autofocus)
                         label(for="email") 
                             i(class="fa-solid fa-envelope") 
                             a  E-mail
